# smc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  compile_commands.json  grammer.txt  smc_d
cmake/: Extras.cmake  LLVM.cmake  UnitTests.cmake
include/: lexer.hpp  llvmBackend.hpp  parser.hpp  utils.hpp
scripts/: test.sh
src/: lexer.cpp  llvmBackend.cpp  main.cpp  parser.cpp  utils.cpp
tests/: lexer_test.cpp  parser_test.cpp  test_main.cpp
tests/examples/: comments.sm  invalid1.sm  invalid2.sm  minimal1.sm  simple2.sm  test.sm
